--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://35.192.69.214:3306/amitie_db?serverTimezone=UTC&characterEncoding=utf8
-      driver-class-name: com.mysql.jdbc.Driver
-      #url: jdbc:log4jdbc:mysql://localhost:3306/block_board?serverTimezone=UTC&characterEncoding=utf8
-      #driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-      username: blockboard
-      password: root
+    url: jdbc:mysql://35.192.69.214:3306/block_board?serverTimezone=UTC&characterEncoding=utf8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #url: jdbc:log4jdbc:mysql://localhost:3306/block_board?serverTimezone=UTC&characterEncoding=utf8
+    #driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+    username: dongwook
+    password: dongwook
   mybatis:
     type-aliases-package: com.project.amitie.mapper
     mapper-locations: mybatis/mapper/**/*.xml
