빌드 상황별 profile 분리

--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,12 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+ext.profile = (!project.hasProperty('profile') || !profile) ? 'dev' : profile
+
+sourceSets {
+    main {
+        resources {
+            srcDirs "src/main/resources", "src/main/resources-${profile}"
+        }
+    }
+}
