--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.6'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 //    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
     annotationProcessor 'org.projectlombok:lombok'
